<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RT Companion JPO</string>
    <string name="rt_addr">Entrez l\'adresse IP du Raytracer</string>
    <string name="connect_rt">Connect</string>
    <string name="github_src">Github</string>
    <string name="more_info">More Info</string>
    <string name="epitech">Epitech</string>
    <string name="title_activity_control">ControlActivity</string>
    <string name="action_settings">Settings</string>
    <string name="open_web">Open with </string>
    <string name="conn">Connected to :</string>
    <string name="add_obj">Add an Object</string>
    <string name="add_spot">Add a Spot</string>
    <string name="ch_obj">Change Objects</string>
    <string name="ch_spot">Change Spots</string>
    <string name="aa">Anti-Aliasing :</string>
    <string name="obj_x">X</string>
    <string name="obj_y">Y</string>
    <string name="obj_z">Z</string>
    <string name="obj_r">R</string>
    <string name="obj_g">G</string>
    <string name="obj_b">B</string>
    <string name="rot_obj_x">Rot X</string>
    <string name="rot_obj_y">Rot Y</string>
    <string name="rot_obj_z">Rot Z</string>
    <string name="angle">Angle</string>
    <string name="rayon">Rayon</string>
    <string name="shine">Shine</string>
    <string name="effect">Effect</string>

    <string-array name="objects">
        <item>Plan</item>
        <item>Sphere</item>
        <item>Cone</item>
        <item>Cylindre</item>
        <item>Tore</item>
        <item>Cube Troué</item>
    </string-array>

    <string-array name="noise">
        <item>None</item>
        <item>Bruit de Perlin</item>
        <item>Wood</item>
        <item>Marbre</item>
        <item>Skybox</item>
    </string-array>

</resources>
